--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,9 @@ label {
 .error-field {
     border: 1px solid red !important;
 }
-
+.navbar-brand {
+    margin-right: 0px !important;
+}
 .container {
     background-color: #ffffff;
     border-radius: 10px;
@@ -25,4 +27,10 @@ canvas {
 #assinaturaCanvas {
     max-width: 100%;
     height: auto;
+}
+.generate-pdf-btn {
+    position: fixed;
+    bottom: 50px; /* Distância do botão em relação ao fundo da página */
+    right: 20px; /* Distância do botão em relação à margem direita da página */
+    z-index: 1000; /* Z-index alto para garantir que o botão fique acima do conteúdo */
 }
