--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,11 @@ canvas {
     border: 1px solid #000;
     margin-top: 10px;
 }
+.canvas-container {
+    display: inline-block;
+    text-align: center;
+    max-width: 100%;
+}
 #assinaturaCanvas {
     max-width: 100%;
     height: auto;
